--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: CICD with ArgoCD
 on: push 
 jobs:
@@ -18,3 +19,14 @@ jobs:
      run: mvn package 
    - name: Install docker buildx tool 
      uses: docker/setup-buildx-action@v3
+   - name: Loginto DockerHUB 
+     uses: docker/login-action@v2
+     with:
+      username: ${{secrets.DOCKERHUB_USERNAME}}
+      password: ${{secrets.DOCKERHUB_TOKEN}}
+   - name: Build and push Image 
+     uses: docker/build-push-action@v6
+     with:
+      context: .
+      push: true 
+      tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:latest
