--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
      with:
       context: .
       push: true 
-      tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:latest
+      tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:${{ github.sha }}
