--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,13 @@ jobs:
       context: .
       push: true 
       tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:${{ github.sha }}
+   - name: Trigger Deployment using ArgoCD
+     run: |
+      cd argocdhelm/templates
+      echo ${{ github.sha }}
+      git config --global user.name 'GitHub Actions'
+      git config --global user.email 'actions@github.com'
+      sed -i "s/latest/${{ github.sha }}/g" deployment.yml
+      git add deployment.yml
+      git commit -m "Update file again deplyment.yaml"
+      git push
