--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,11 @@ jobs:
       tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:${{ github.run_number }}
    - name: Trigger Deployment using ArgoCD
      run: |
-      cd argocdhelm/templates
+      cd argocdhelm
       echo ${{ github.run_number }}
       git config --global user.name 'GitHub Actions'
       git config --global user.email 'actions@github.com'
-      sed -i "s/latest/${{ github.run_number }}/g" deployment.yml
-      git add deployment.yml
-      git commit -m "Update file again deplyment.yaml"
+      sed -i "s/^  tag: .*/  tag: {{ github.run_number }}/" values.yaml
+      git add values.yaml
+      git commit -m "Update file values.yaml"
       git push
