--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       echo ${{ github.run_number }}
       git config --global user.name 'GitHub Actions'
       git config --global user.email 'actions@github.com'
-      sed -i "s/^  tag: .*/  tag: {{ github.run_number }}/" values.yaml
+      sed -i "s/^  tag: .*/  tag: ${{ github.run_number }}/" values.yaml
       git add values.yaml
       git commit -m "Update file values.yaml"
       git push
