--- a/Deployment.yml
+++ b/Deployment.yml
@@ -1,7 +1,7 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: kubeserve
+  name: kubeserve-demo1
 spec:
   replicas: 4
   minReadySeconds: 10 # wait for 45 sec before going to deploy next pod
