--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
      - name: Login to Dockerhub
        uses: docker/login-action@v3
        with:
-         username: ${{ sectets.DOCKERHUB_USERNAME }}
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
          password: ${{ secrets.DOCKERHUB_TOKEN }}
      - name: Build and Push
        uses: docker/build-push-action@v6
