--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
        with:
          context: .
          push: true
-         tag: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imagename }}:${{ github.run_number }}
+         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imagename }}:${{ github.run_number }}
      - name: Trigger Deployment using argocd
        run: |
          cd argocd
