--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
          git config --global user.name 'Github Actions'
          git config --global user.email 'actions@github.com'
          sed -i "s/^ tag: .*/ tag: ${{ github.run_number }}/" values.yaml
-         git add values.yaml
+         git add .
          git commit -m "file values.yaml updated"
          git push
