--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,40 @@
 name: CICD with ArgoCD
-on: push 
+on: push
 jobs:
- cicd:
-  env:
-   imageName: "argocddemo"
-  runs-on: ubuntu-latest
-  steps:
-   - name: Checkout the repo 
-     uses: actions/checkout@v3
-   - name: Setup Java 11
-     uses: actions/setup-java@v4
-     with:
-      distribution: 'temurin'
-      java-version: '11'
-      cache: 'maven'
-   - name: Build the code 
-     run: mvn package 
-   - name: Install docker buildx tool 
-     uses: docker/setup-buildx-action@v3
-   - name: Loginto DockerHUB 
-     uses: docker/login-action@v2
-     with:
-      username: ${{secrets.DOCKERHUB_USERNAME}}
-      password: ${{secrets.DOCKERHUB_TOKEN}}
-   - name: Build and push Image 
-     uses: docker/build-push-action@v6
-     with:
-      context: .
-      push: true 
-      tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imageName }}:${{ github.run_number }}
-   - name: Trigger Deployment using ArgoCD
-     run: |
-      cd argocd
-      echo ${{ github.run_number }}
-      git config --global user.name 'GitHub Actions'
-      git config --global user.email 'actions@github.com'
-      sed -i "s/^  tag: .*/  tag: ${{ github.run_number }}/" values.yaml
-      git add values.yaml
-      git commit -m "Update file values.yaml"
-      git push
+  CICDJob:
+    env:
+      imagename: "argocdimage"
+    runs-on: ubuntu-latest
+    steps:
+     - name: checkout the repo
+       uses: actions/checkout@v4
+     - name: Setup Java 17
+       uses: actions/setup-java@v4
+       with:
+         distribution: 'temurin'
+         java-version: '17'
+     - name: Build the code
+       run: mvn package
+     - name: Install docker
+       uses: docker/setup-docker-action@v4
+     - name: Login to Dockerhub
+       uses: docker/login-action@v3
+       with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
+     - name: Build and Push
+       uses: docker/build-push-action@v6
+       with:
+         context: .
+         push: true
+         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.imagename }}:${{ github.run_number }}
+     - name: Trigger Deployment using argocd
+       run: |
+         cd argocd
+         echo ${{ github.run_number }}
+         git config --global user.name 'Github Actions'
+         git config --global user.email 'actions@github.com'
+         sed -i "s/^  tag: .*/  tag: ${{ github.run_number }}/" values.yaml
+         git add values.yaml
+         git commit -m "file values.yaml updated"
+         git push
