--- a/argocd/templates/deployment.yaml
+++ b/argocd/templates/deployment.yaml
@@ -19,4 +19,4 @@ spec:
     spec:
       containers:
       - name: app
-        image: "{{ .Values.image.repository }}":"{{ .Values.image.tag }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
